--- a/package.json
+++ b/package.json
@@ -20,23 +20,24 @@
   },
   "dependencies": {
     "@google/clasp": "^2.4.2",
-    "@types/google-apps-script": "^1.0.78",
-    "@types/jest": "^29.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "gts": "^5.2.0",
+    "@types/google-apps-script": "^1.0.83",
+    "@types/jest": "^29.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "gts": "^5.3.1",
     "jest": "^29.7.0",
     "license-check-and-add": "^4.0.5",
     "ncp": "^2.0.0",
-    "prettier": "^3.1.0",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.6.0",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.22.4",
     "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-license": "^3.2.0",
+    "rollup-plugin-license": "^3.5.3",
+    "rollup-plugin-prettier": "^4.1.1",
     "rollup-plugin-typescript2": "^0.36.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.2"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.2"
   }
 }
